--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,27 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.antlr-2.7.7.jar=C:\\Users\\wagne\\Desktop\\developer\\antlr-2.7.7.jar
 file.reference.classmate-1.3.0.jar=C:\\Users\\wagne\\Desktop\\developer\\classmate-1.3.0.jar
+file.reference.classmate-1.3.4.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\classmate-1.3.4.jar
 file.reference.dom4j-1.6.1.jar=C:\\Users\\wagne\\Desktop\\developer\\dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-commons-annotations-5.0.1.Final.jar
 file.reference.hibernate-core-5.2.16.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-core-5.2.16.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.2.Final.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\hibernate-jpa-2.1-api-1.0.2.Final.jar
+file.reference.hibernate-validator-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\aqui\\hibernate-validator-5.2.4.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\aqui\\hibernate-validator-annotation-processor-5.2.4.Final.jar
+file.reference.hibernate-validator-cdi-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\aqui\\hibernate-validator-cdi-5.2.4.Final.jar
 file.reference.jandex-2.0.3.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jandex-2.0.3.Final.jar
 file.reference.javassist-3.22.0-GA.jar=C:\\Users\\wagne\\Desktop\\developer\\javassist-3.22.0-GA.jar
+file.reference.javax.el-3.0.1-b09.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\javax.el-3.0.1-b09.jar
 file.reference.jboss-logging-3.3.1.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jboss-logging-3.3.1.Final.jar
+file.reference.jboss-logging-3.3.2.Final.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\jboss-logging-3.3.2.Final.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
+file.reference.joda-time-2.9.7.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\joda-time-2.9.7.jar
+file.reference.jsoup-1.8.3.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\jsoup-1.8.3.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\log4j-1.2.17.jar
 file.reference.mysql-connector-java-5.1.38.jar=C:\\Users\\wagne\\Desktop\\developer\\mysql-connector-java-5.1.38.jar
+file.reference.paranamer-2.8.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\paranamer-2.8.jar
+file.reference.validation-api-2.0.1.Final.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\validation-api-2.0.1.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -51,7 +63,19 @@ javac.classpath=\
     ${file.reference.javassist-3.22.0-GA.jar}:\
     ${file.reference.jboss-logging-3.3.1.Final.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38.jar}
+    ${file.reference.mysql-connector-java-5.1.38.jar}:\
+    ${file.reference.classmate-1.3.4.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.2.Final.jar}:\
+    ${file.reference.javax.el-3.0.1-b09.jar}:\
+    ${file.reference.jboss-logging-3.3.2.Final.jar}:\
+    ${file.reference.joda-time-2.9.7.jar}:\
+    ${file.reference.jsoup-1.8.3.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.paranamer-2.8.jar}:\
+    ${file.reference.validation-api-2.0.1.Final.jar}:\
+    ${file.reference.hibernate-validator-5.2.4.Final.jar}:\
+    ${file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar}:\
+    ${file.reference.hibernate-validator-cdi-5.2.4.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
