--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=LojaJogos
+application.vendor=wagne
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/LojaJogos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.antlr-2.7.7.jar=C:\\Users\\wagne\\Desktop\\developer\\antlr-2.7.7.jar
 file.reference.classmate-1.3.0.jar=C:\\Users\\wagne\\Desktop\\developer\\classmate-1.3.0.jar
@@ -35,9 +38,9 @@ file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\wagne\\D
 file.reference.hibernate-core-5.2.16.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-core-5.2.16.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-jpa-2.1-api-1.0.0.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.2.Final.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\hibernate-jpa-2.1-api-1.0.2.Final.jar
-file.reference.hibernate-validator-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\aqui\\hibernate-validator-5.2.4.Final.jar
-file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\aqui\\hibernate-validator-annotation-processor-5.2.4.Final.jar
-file.reference.hibernate-validator-cdi-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\aqui\\hibernate-validator-cdi-5.2.4.Final.jar
+file.reference.hibernate-validator-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-validator-5.2.4.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-validator-annotation-processor-5.2.4.Final.jar
+file.reference.hibernate-validator-cdi-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-validator-cdi-5.2.4.Final.jar
 file.reference.jandex-2.0.3.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jandex-2.0.3.Final.jar
 file.reference.javassist-3.22.0-GA.jar=C:\\Users\\wagne\\Desktop\\developer\\javassist-3.22.0-GA.jar
 file.reference.javax.el-3.0.1-b09.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\javax.el-3.0.1-b09.jar
@@ -75,7 +78,9 @@ javac.classpath=\
     ${file.reference.validation-api-2.0.1.Final.jar}:\
     ${file.reference.hibernate-validator-5.2.4.Final.jar}:\
     ${file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar}:\
-    ${file.reference.hibernate-validator-cdi-5.2.4.Final.jar}
+    ${file.reference.hibernate-validator-cdi-5.2.4.Final.jar}:\
+    ${libs.beans-binding.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -100,7 +105,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=br.wagnerpassos.principal.Principal
+main.class=br.wagnerpassos.view.FormularioPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
