--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -105,7 +105,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=br.wagnerpassos.view.FormularioPrincipal
+main.class=br.wagnerpassos.visao.FormularioPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
