--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,15 +43,23 @@ file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar=C:\\User
 file.reference.hibernate-validator-cdi-5.2.4.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\hibernate-validator-cdi-5.2.4.Final.jar
 file.reference.jandex-2.0.3.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jandex-2.0.3.Final.jar
 file.reference.javassist-3.22.0-GA.jar=C:\\Users\\wagne\\Desktop\\developer\\javassist-3.22.0-GA.jar
+file.reference.javax.el-2.2.4.jar=C:\\Users\\wagne\\Desktop\\developer\\2\\javax.el-2.2.4.jar
 file.reference.javax.el-3.0.1-b09.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\javax.el-3.0.1-b09.jar
+file.reference.javax.el-api-2.2.4.jar=C:\\Users\\wagne\\Desktop\\developer\\2\\javax.el-api-2.2.4.jar
+file.reference.jboss-logging-3.2.1.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\2\\jboss-logging-3.2.1.Final.jar
 file.reference.jboss-logging-3.3.1.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jboss-logging-3.3.1.Final.jar
 file.reference.jboss-logging-3.3.2.Final.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\jboss-logging-3.3.2.Final.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
+file.reference.joda-time-2.7.jar=C:\\Users\\wagne\\Desktop\\developer\\2\\joda-time-2.7.jar
 file.reference.joda-time-2.9.7.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\joda-time-2.9.7.jar
 file.reference.jsoup-1.8.3.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\jsoup-1.8.3.jar
+file.reference.jsoup-1.8.3.jar-1=C:\\Users\\wagne\\Desktop\\developer\\2\\jsoup-1.8.3.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\log4j-1.2.17.jar
+file.reference.log4j-1.2.17.jar-1=C:\\Users\\wagne\\Desktop\\developer\\2\\log4j-1.2.17.jar
 file.reference.mysql-connector-java-5.1.38.jar=C:\\Users\\wagne\\Desktop\\developer\\mysql-connector-java-5.1.38.jar
+file.reference.paranamer-2.5.5.jar=C:\\Users\\wagne\\Desktop\\developer\\2\\paranamer-2.5.5.jar
 file.reference.paranamer-2.8.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\paranamer-2.8.jar
+file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\wagne\\Desktop\\developer\\2\\validation-api-1.1.0.Final.jar
 file.reference.validation-api-2.0.1.Final.jar=C:\\Users\\wagne\\Desktop\\Hibernate Validator 6.0.9\\validation-api-2.0.1.Final.jar
 includes=**
 jar.compress=false
@@ -80,7 +88,15 @@ javac.classpath=\
     ${file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar}:\
     ${file.reference.hibernate-validator-cdi-5.2.4.Final.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.javax.el-2.2.4.jar}:\
+    ${file.reference.javax.el-api-2.2.4.jar}:\
+    ${file.reference.jboss-logging-3.2.1.Final.jar}:\
+    ${file.reference.joda-time-2.7.jar}:\
+    ${file.reference.jsoup-1.8.3.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.paranamer-2.5.5.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -105,7 +121,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=br.wagnerpassos.visao.FormularioPrincipal
+main.class=br.wagnerpassos.visao.TelaPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
